SFUSA/force-app/main/default/objects/GBS_Case_4th_Type__c/fields/Access_Groups__c.field-meta.xml
<CustomField>
        <fullName>Access_Groups__c</fullName>
        <label>Access Groups</label>
        <required>true</required>
        <type>TextArea</type>
    </CustomField>