SFUSA/force-app/main/default/objects/GBS_Case_4th_Type__c/fields/Language__c.field-meta.xml
<CustomField>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>