SFUSA/force-app/main/default/objects/GBS_Case_4th_Type__c/fields/Sort__c.field-meta.xml
<CustomField>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>