SFUSA/force-app/main/default/objects/GBS_Case_4th_Type__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>Dependent_Value__c</columns>
        <columns>Access_Groups__c</columns>
        <columns>Language__c</columns>
        <columns>Sort__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>